--- a/log.html
+++ b/log.html
@@ -1806,31 +1806,31 @@ function stopPropagation(event) {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,39],[],[[4,0,0,[],[1,33,3],[[5,5,0,0,0,0,0,0,[1,33,2],[[0,6,7,0,8,9,0,0,[1,35,0],[]]]],[7,0,0,0,0,0,0,0,[3,35,0],[[0,6,7,0,8,10,0,0,[3,35,0],[]]]],[5,11,0,0,0,0,0,0,[1,36,0],[[0,6,7,0,8,12,0,0,[1,36,0],[]]]]]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,4,[],[0,0,52],[],[[5,0,6,[],[0,43,8,7],[[0,8,9,0,10,11,12,0,[1,43,0],[[43,2,13]]],[0,14,9,0,15,16,17,0,[1,44,0],[[44,2,18]]],[0,19,0,0,20,21,0,0,[0,44,6],[[3,22,0,0,0,0,0,0,[0,45,5],[[4,23,0,0,0,0,0,0,[1,45,0],[[0,24,9,0,25,26,27,0,[1,45,0],[[45,2,28]]],[0,29,9,0,30,27,0,0,[1,45,0],[]]]],[4,31,0,0,0,0,0,0,[1,46,0],[[0,24,9,0,25,26,27,0,[1,46,0],[[46,2,32]]],[0,29,9,0,30,27,0,0,[1,46,0],[]]]],[4,33,0,0,0,0,0,0,[1,46,1],[[0,24,9,0,25,26,27,0,[1,46,1],[[46,2,34]]],[0,29,9,0,30,27,0,0,[1,47,0],[]]]],[4,35,0,0,0,0,0,0,[1,47,1],[[0,24,9,0,25,26,27,0,[1,47,0],[[47,2,36]]],[0,29,9,0,30,27,0,0,[1,47,1],[]]]],[4,37,0,0,0,0,0,0,[1,48,1],[[0,24,9,0,25,26,27,0,[1,48,0],[[48,2,38]]],[0,29,9,0,30,27,0,0,[1,48,1],[]]]],[4,39,0,0,0,0,0,0,[0,49,1],[[0,24,9,0,25,26,27,0,[0,49,1],[[49,5,7]]],[0,29,9,0,30,27,0,0,[3,50,0],[]]]]]]]],[0,29,9,0,30,40,0,0,[3,50,0],[]]]]],[[1,41,0,0,42,0,0,0,[1,42,1],[[0,29,9,0,30,43,0,0,[1,42,1],[]]]]],[1,0,1,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*03-IF Else","*C:\\Users\\hasba\\OneDrive\\Masaüstü\\robot framework_examp\\RF\\03-IF_Else.robot","*RF/03-IF_Else.robot","*Test 01","*${sayi2} &gt; ${sayi1}","*Log To Console","*BuiltIn","*<p>Logs the given message to the console.\x3c/p>","*${sayi2}, ${sayi1}'den buyuktur","*${sayi1}, ${sayi2}'den buyuktur","*&quot;Bu&quot; in &quot;${cumle}&quot;","*\"Bu\" kelimesi mevcut"]);
+window.output["strings"] = window.output["strings"].concat(["*","*08-Keywords","*C:\\Users\\hasba\\OneDrive\\Masaüstü\\robot framework_examp\\RF\\08-Keywords.robot","*RF/08-Keywords.robot","*<p>Bu suite ile ABC numarali user storynin ozellikleri test edilir\x3c/p>","*Test 01","*<p>Bu test deneme amacli olusturulmustur\x3c/p>","*Evaluating expression '100 a / 2' failed: SyntaxError: invalid syntax (&lt;string&gt;, line 1)","*Set Variable","*BuiltIn","*<p>Returns the given values which can then be assigned to a variables.\x3c/p>","*100","*${sayi}","*${sayi} = 100","*Create List","*<p>Returns a list containing given items.\x3c/p>","*2, 4, 6, 8, 10, ${sayi} a","*@{listem}","*@{listem} = [ 2 | 4 | 6 | 8 | 10 | 100 a ]","*Sayilari Ikiye Bol","*<p>Bu keyword gelen sayilari 2'ye boler\x3c/p>","*${listem}","*${e} IN [ @{liste} ]","*${e} = 2","*Evaluate","*<p>Evaluates the given expression in Python and returns the result.\x3c/p>","*${e} / 2","*${sonuc}","*${sonuc} = 1.0","*Log To Console","*<p>Logs the given message to the console.\x3c/p>","*${e} = 4","*${sonuc} = 2.0","*${e} = 6","*${sonuc} = 3.0","*${e} = 8","*${sonuc} = 4.0","*${e} = 10","*${sonuc} = 5.0","*${e} = 100 a","*${cokYeniDegisken}","*Testi chrome Browseri Ile Baslat","*<p>Bu keyword konsoldan parametre ile Browser adi ile testi ayaga kaldirir Args chrome= browser adi\x3c/p>","*${browser}"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:00","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:00","fail":0,"id":"s1","label":"03-IF Else","name":"03-IF Else","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:00","fail":1,"label":"All Tests","pass":0,"skip":0}],[],[{"elapsed":"00:00:00","fail":1,"id":"s1","label":"08-Keywords","name":"08-Keywords","pass":0,"skip":0}]];
 </script>
 <script type="text/javascript">
 window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1699854202530;
+window.output["baseMillis"] = 1700588073575;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 63;
+window.output["generated"] = 78;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
 </script>
 <script type="text/javascript">
-window.settings = {"defaultLevel":"INFO","minLevel":"NONE","reportURL":"report.html","rpa":false,"splitLogBase":"log","title":""};
+window.settings = {"defaultLevel":"INFO","minLevel":"INFO","reportURL":"report.html","rpa":false,"splitLogBase":"log","title":""};
 </script>
 <title></title>
 </head>
