--- a/report.html
+++ b/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,4,[],[0,0,52],[],[[5,0,6,[],[0,43,8,7],[]]],[],[1,0,1,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,9448],[],[[4,0,0,[],[1,308,9137],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*08-Keywords","*C:\\Users\\hasba\\OneDrive\\Masaüstü\\robot framework_examp\\RF\\08-Keywords.robot","*RF/08-Keywords.robot","*<p>Bu suite ile ABC numarali user storynin ozellikleri test edilir\x3c/p>","*Test 01","*<p>Bu test deneme amacli olusturulmustur\x3c/p>","*Evaluating expression '100 a / 2' failed: SyntaxError: invalid syntax (&lt;string&gt;, line 1)"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Test01","*C:\\Users\\hasba\\OneDrive\\Masaüstü\\robot framework_examp\\SeleniumTestler\\tests\\test01.robot","*SeleniumTestler/tests/test01.robot","*ilk testim"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:00","fail":1,"label":"All Tests","pass":0,"skip":0}],[],[{"elapsed":"00:00:00","fail":1,"id":"s1","label":"08-Keywords","name":"08-Keywords","pass":0,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:09","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:09","fail":0,"id":"s1","label":"Test01","name":"Test01","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1700588073575;
+window.output["baseMillis"] = 1700943702007;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 78;
+window.output["generated"] = 9469;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
