--- a/report.html
+++ b/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,9448],[],[[4,0,0,[],[1,308,9137],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[0,0,354],[],[[4,0,0,[],[0,333,15,5],[]]],[],[1,0,1,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Test01","*C:\\Users\\hasba\\OneDrive\\Masaüstü\\robot framework_examp\\SeleniumTestler\\tests\\test01.robot","*SeleniumTestler/tests/test01.robot","*ilk testim"]);
+window.output["strings"] = window.output["strings"].concat(["*","*US001","*c:\\Users\\hasba\\OneDrive\\Masaüstü\\robot framework_examp\\SeleniumTestler\\tests\\US001.robot","eNq9zb0KwjAUhuFbkUJWv1i3UjuYrtKhdpZTOKHBpJFz4s/lK3oPTs/08ra0WYT9ofIhcgPANZiURbGQzoRh5V7Cg3EiJeP25ui0/ITkORdTWy+U+JnleuEXpRtGjryGezqzlsiC8lExjdbutt+m6v55a0HdGz8zTtg=","*Test 001","*Variable '${BROWSER}' not found."]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:09","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:09","fail":0,"id":"s1","label":"Test01","name":"Test01","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:00","fail":1,"label":"All Tests","pass":0,"skip":0}],[],[{"elapsed":"00:00:00","fail":1,"id":"s1","label":"US001","name":"US001","pass":0,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1700943702007;
+window.output["baseMillis"] = 1701028717980;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 9469;
+window.output["generated"] = 387;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
